contrast fix

--- a/css/css-global.css
+++ b/css/css-global.css
@@ -96,7 +96,7 @@ span {font-size: inherit;}
 	.desktop{display:none;}
 	h1{
 		font-size:2.2em;
-		color: #262626;
+		color: #000000;
 	}
 	h2{font-size:1.8em}
 	.display{font-size:1.8em}
